--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <!--Img Col-->
         <div class="w-full lg:w-2/5">
          
-            <img src="/assets/maman.jpeg " class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
+            <img src="assets/./maman.jpeg " class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
 
         </div>
         
