--- a/index.html
+++ b/index.html
@@ -2713,7 +2713,7 @@ video {
     <header class="fixed z-50 flex flex-wrap sm:justify-start sm:flex-nowrap w-full bg-white text-sm py-4 dark:bg-neutral-800">
       <nav class="max-w-[85rem] w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between" aria-label="Global">
         <div class="flex items-center justify-between">
-          <a class="flex-none text-3xl font-semibold dark:text-white" href="#">My Portfolio</a>
+          <a class="flex-none text-3xl font-semibold dark:text-white" href="#">MECHANIZED</a>
           <div class="sm:hidden">
             <button
               type="button"
@@ -2776,8 +2776,8 @@ video {
       </div>
       
       <div class="relative z-10 flex flex-col justify-center items-center h-full text-center">
-        <h1 class="text-5xl font-bold leading-tight mb-4">Welcome to My Awesome Portfolio Website</h1>
-        <p class="text-lg text-gray-300 mb-8">Discover amazing features and services that await you.</p>
+        <h1 class="text-5xl font-bold leading-tight mb-4">Welcome To My Workshop</h1>
+        <p class="text-lg text-gray-300 mb-8">Discover amazing features and services that await you. <br> <b>For I'am The Adeptus Mechanicus</b></p>
         <a href="#" class="bg-blue-400 text-gray-900 hover:bg-blue-300 py-2 px-6 rounded-full text-lg font-semibold transition duration-300 ease-in-out transform hover:scale-105 hover:shadow-lg">Get Started</a>
       </div>
     </div>
@@ -2815,16 +2815,17 @@ video {
                         viewBox="0 0 20 20">
                         <path
                             d="M9 12H1v6a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-6h-8v2H9v-2zm0-1H0V5c0-1.1.9-2 2-2h4V2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v1h4a2 2 0 0 1 2 2v6h-9V9H9v2zm3-8V2H8v1h4z" />
-                    </svg> What you do
+                    </svg> 3D Generalists & Smith's
                 </p>
                 <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
                     <svg class="h-4 fill-current text-blue-700 pr-4" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 20 20">
                         <path
                             d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z" />
-                    </svg> Alamat isi sendiri
+                    </svg> Bandung. Jl.Kopo Gg.Babakan Rahayu
                 </p>
-                <p class="pt-8 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat libero similique voluptas magni natus. Facilis ab quia dicta esse quaerat, vitae, illo eveniet necessitatibus quo nobis quidem culpa maiores eos magni, non ex voluptas velit officiis tempora veniam. Cum obcaecati asperiores voluptates pariatur consectetur accusamus iure consequatur architecto ex tempore!</p>
+                <p class="pt-8 text-sm">I'am one of the enginer that serve under the god emperor. The Primarchs had given me a command to help the people of Terra with digitalizing object of their desire under the God Emperor.
+                </p>
 
                 <div class="pt-12 pb-8">
                     <button class="bg-blue-500 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-full">
@@ -2935,8 +2936,7 @@ video {
                     <span class="relative text-6xl">My Work</span>
                 </span>
             </h2>
-            <p class="text-base text-gray-700 md:text-lg">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque rem aperiam, eaque ipsa quae.
+            <p class="text-base text-gray-700 md:text-lg">These are the achivement i've had since working the Primarchs Lord Ferrus Manus of the Iron Hand.
             </p>
         </div>
     
